src/main/java/error/example/domain/error/AnotherDomainError.java
package error.example.domain.error;

public class AnotherDomainError extends DomainError {

    public AnotherDomainError(String message) {
        super(message);
    }
}
